2011-08-05  H.J. Lu  <hongjiu.lu@intel.com>

	PR middle-end/47364
	* gcc.dg/torture/pr47364-1.c: New.
	* gcc.c-torture/compile/pr47364-1.c: Likewise.
	* gcc.c-torture/compile/pr47364-2.c: Likewise.

2011-08-05  Thomas Koenig  <tkoenig@gcc.gnu.org>

	PR fortran/37221
	* gfortran.dg/transfer_check_2.f90:  New test case.

2011-08-05  Jan Hubicka  <jh@suse.cz>

	PR middle-end/49494
	* gfortran.dg/pr49494.f90: New testcase.

2011-08-05  Jan Hubicka  <jh@suse.cz>

	PR middle-end/49735
	* gcc.c-torture/compile/pr49735.c: New testcase.

2011-08-05  Jason Merrill  <jason@redhat.com>

	PR c++/47453
	* g++.dg/cpp0x/initlist56.C: New.

	PR c++/49812
	* g++.dg/overload/rvalue2.C: New.

	PR c++/49983
	* g++.dg/cpp0x/range-for21.C: New.

	* g++.dg/ext/vla11.C: New.

2011-08-05  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/49984
	* gcc.dg/tree-ssa/vrp59.c: New testcase.

2011-08-05  Richard Guenther  <rguenther@suse.de>

	* gcc.dg/tree-ssa/vrp51.c: Disable CCP.
	* gcc.dg/tree-ssa/vrp52.c: Likewise.
	* gcc.dg/tree-ssa/vrp53.c: Likewise.

2011-08-04  Mikael Morin  <mikael.morin@sfr.fr>

	* gfortran.dg/dependency_26.f90: Add a module to the cleanup directive.
	* gfortran.dg/trim_optimize_2.f90: Add a module cleanup directive.
	* gfortran.dg/ldist-pr43023.f90: Ditto.
	* gfortran.dg/namelist_52.f90: Ditto.
	* gfortran.dg/interface_proc_end.f90: Ditto.
	* gfortran.dg/vector_subscript_bound_1.f90: Ditto.
	* gfortran.dg/generic_typebound_operator_1.f90: Ditto.

2011-08-04  Ira Rosen  <ira.rosen@linaro.org>

	* gcc.dg/vect/vect-over-widen-1.c: New test.
	* gcc.dg/vect/vect-over-widen-2.c: New test.
	* gcc.dg/vect/vect-over-widen-3.c: New test.
	* gcc.dg/vect/vect-over-widen-4.c: New test.

2011-08-04  Richard Guenther  <rguenther@suse.de>

	PR fortran/49957
	* gfortran.dg/vect/O3-pr49957.f: New testcase.

2011-08-04  Ian Bolton  <ian.bolton@arm.com>

	* gcc.target/arm/vfp-1.c: no large negative offsets on Thumb2.

2011-08-04  Jakub Jelinek  <jakub@redhat.com>
